--- a/OsuRTDataProvider.csproj
+++ b/OsuRTDataProvider.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Coosu.Beatmap" Version="2.2.7" />
     <PackageReference Include="Microsoft.Extensions.Logging">
       <Version>6.0.0</Version>
     </PackageReference>
