--- a/OsuRTDataProvider.csproj
+++ b/OsuRTDataProvider.csproj
@@ -5,6 +5,7 @@
     <PackageTags>osu, osu!</PackageTags>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Version>2.7.0</Version>
+    <Platforms>AnyCPU;x86</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
